# 3DRenderLearn

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/gx/kotlin/assimpdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/gx/kotlin/assimpdemo/: AssimpActivity.kt  BaseActivity.kt  MainActivity.kt
app/src/main/res/layout/: activity_assimp.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/gx/kotlin/assimpdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
scene/: build.gradle
scene/src/androidTest/java/com/gx/kotlin/scene/: ExampleInstrumentedTest.java
scene/src/main/: AndroidManifest.xml
scene/src/main/assets/shaders/: modelTextured.fsh  modelTextured.vsh  texture.frag  texture.vert  white.frag  white.vert
scene/src/main/cpp/: AssetManager.h  CMakeLists.txt  NativeRoamView.cpp  NativeRoamView.h  RoamRender.cpp  RoamRender.h  SceneRender.cpp  SceneRender.h  asset_manager.h  attach_env.cpp  attach_env.h  attach_jni.cpp  attach_jni.h  jni.cpp  jni.h  jni_native.cpp  jni_native.h  logger.cpp  logger.h  logging_android.cpp  main.cpp  native_roam_view.cpp  native_roam_view.h  roam_render.cpp  roam_render.h  roam_renderer.cpp  roam_renderer.h  scene_render.cpp  scene_render.h
scene/src/main/cpp/camera/: GLCamera.cpp  GLCamera.h
scene/src/main/cpp/helper/: FileHelper.cpp  FileHelper.h  GLFunctions.cpp  GLFunctions.h  GLM.h  JNIHelper.cpp  JNIHelper.h  RenderLogger.h
scene/src/main/cpp/model/: AssimpLoader.cpp  AssimpLoader.h  AssimpModel.cpp  AssimpModel.h
scene/src/main/cpp/roamgl/: roamgl.cmake
scene/src/main/cpp/roamgl/glframework/: gl_core.h  gl_functions.cpp  gl_functions.h  gl_geometry.cpp  gl_geometry.h
scene/src/main/cpp/roamgl/glframework/renderer/: renderer.cpp  renderer.h
scene/src/main/cpp/roamgl/glframework/shader/: shader.cpp  shader.h
scene/src/main/cpp/roamgl/glframework/texture/: texture.cpp  texture.h
scene/src/main/cpp/roamgl/renderer/: renderer.cpp  renderer.h
scene/src/main/cpp/roamgl/shader/: shader.cpp
scene/src/main/cpp/roamgl/utils/: event.cpp  event.h  file_utils.cpp  file_utils.h  log.cpp
scene/src/main/cpp/shader/: Shader.cpp  Shader.h  ShaderS.cpp  ShaderS.h
scene/src/main/cpp/utils/: enum.h  log.h
scene/src/main/java/com/gx/kotlin/scene/: NativeRenderScene.java
scene/src/main/java/com/gx/kotlin/scene/gesture/: AndroidGesturesManager.java  BaseGesture.java  Constants.java  Gesture.java  MoveDistancesObject.java  MoveGestureDetector.java  MultiFingerDistancesObject.java  MultiFingerGesture.java  MultiFingerTapGestureDetector.java  PermittedActionsGuard.java  PointerDistancePair.java  ProgressiveGesture.java  RotateGestureDetector.java  ShoveGestureDetector.java  Utils.java  (+3 more)
scene/src/test/java/com/gx/kotlin/scene/: ExampleUnitTest.java
(+14 files in other folders)
